--- a/frontend/app/App.css
+++ b/frontend/app/App.css
@@ -3,8 +3,9 @@
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .header {
@@ -27,8 +28,10 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     margin:0 auto;
+    padding: 80px;
+    --button-hover: #383838;
 }
 
 form label {
