added a 'calendar' path. Testing new design in 'calendar' and a new implimintation of calendar using FullCalendar

--- a/frontend/app/App.css
+++ b/frontend/app/App.css
@@ -38,8 +38,10 @@ html, body {
 
     width: 100vw;
     box-sizing: border-box;
-    display: block; 
-    margin: 0; 
+    display: flex;
+    align-items: center;
+    padding-left: 10px; 
+    /* margin: 0;  */
     /* padding: 0; */
 }
 
