--- a/frontend/app/App.css
+++ b/frontend/app/App.css
@@ -5,7 +5,7 @@
 html, body {
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .react-datepicker-input {
