--- a/frontend/app/Calendar.css
+++ b/frontend/app/Calendar.css
@@ -1,3 +1,11 @@
+.fc-toolbar-title {
+    color: black;
+}
+
+.fc-col-header-cell {
+    color: black;
+}
+
 form {
     display: flex;
     flex-direction: column; /* Stack form groups vertically */
